Add header banner styles to style.css

--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -790,4 +790,12 @@ li {
  width: 85px;
  object-fit: cover;
 }
+   .wrapper-header-banner-section>h1 {
+ font-size: 45px;
+ line-height: 64px;
+ color: var(--clr-primary);
+ font-weight: 600;
+ letter-spacing: 3px;
+}
+
 }
